# inkbox-split-rs

./: Cargo.toml  README.md  original.py
src/: main.rs
